Fix navbar light/dark switch alignment

--- a/assets/css/dark-mode.css
+++ b/assets/css/dark-mode.css
@@ -128,3 +128,8 @@
   color: rgba(255,255,255,0.3);
   border-right-color: #a0a0a0;
 }
+@media (min-width: 768px) {
+  .navbar-custom .navbar-nav .nav-item:not(.dropdown):last-child .nav-link {
+    padding-right: 1rem;
+  }
+}
